# sted_automation

./: CombineCSVs.ipynb  JSON_writer.ipynb  LICENSE  Measurement.py  NormVarAutofocus.ipynb  README.md  ResaveMSRAsTiff.py  auto-nucleus-midplane.ipynb  bead_fit_quality_control.ipynb  display_util.py  generic_pipeline_test.ipynb  grid_test.py  i16_blocking_run.ipynb  importMSR.py  linesync_test.ipynb  main_file_automation.ipynb  p2_call_server.ipynb  p2_remote_nd_acquisition.ipynb  p2_save_parameters_json.ipynb  p2_simple_pair_automation.ipynb  p2_threestep_automation.ipynb  pipeline2-spot-pair.ipynb  pipeline2_test.py  plotDetectionCoordinates.ipynb  pyproject.toml  refactor_large_image_measurement.ipynb  refactor_multipoint_measurement.ipynb  refactor_pair_automation.ipynb  refactor_selective_overview.ipynb  refactor_spiral.ipynb  refactor_stitching_test.ipynb  saveJPEGFrom2ColorMSR.py  simple_automation.ipynb  simple_bac_automation.ipynb  simple_pair_automation-yellowspots.ipynb  simple_pair_automation.ipynb  sortImagesIntoFolders.ipynb  spot_util.py  test.json  test_3_step.ipynb  (+6 more)
STEDMetadata/: ReadSTEDMetadata.py
Util/: coordinate_util.py  coordinates.py  datastructures.py  imspector_util.py  json_test.py  log_util.py  tile_util.py
archive/: CombineCSVs.ipynb  Measurement.py  README.md  ResaveMSRAsTiff.py  bead_fit_quality_control.ipynb  ellipse_fit.ipynb  fix_log_csvs.ipynb  generic_pipeline_test.ipynb  h5_reader_stitching_test.ipynb  i16_channel_num_error.ipynb  ij_io.py  linesync_test.ipynb  main_file_automation.ipynb  old_display_util.py  plot_detections.ipynb  (+12 more)
(+140 files in other folders)
