[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "autosted"
version = "2.0.0-dev"
authors = [
  { name="David Hörl", email="hoerldavid@gmail.com" },
]
description = "Flexible framework for automated (STED) microscopy via Imspector"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "CalmUtils @ git+http://github.com/CALM-LMU/CalmUtils.git@0.0.22"
]

[project.urls]
"Homepage" = "https://github.com/hoerlteam/sted_automation"
"Bug Tracker" = "https://github.com/hoerlteam/sted_automation/issues"
